# stm-persist

./: LICENSE  stm-persist.cabal
Control/Concurrent/: Log.hs  Persist.hs
